# src/swagger_prod.yaml
@@ -10,7 +10,7 @@ externalDocs:
   description: Bizzzy
   url: fagsfagsf
 servers:
-  - url: "http://localhost:8000/api/v1"
+  - url: "https://bizzzy-test-dev-6ffd12d31812.herokuapp.com/api/v1"
 tags:
   - name: User
     description: Everything about user
@@ -22,6 +22,8 @@ tags:
     description: Everything about Job
   - name: Job
     description: Everything about Job
+  - name: Feedback
+    description: Everything about Feedback
 
 paths:
   # User API
@@ -386,7 +388,7 @@ paths:
   /add/feedback:
     post:
       tags:
-        - User
+        - Feedback
       summary: Add feedback
       description: Post feedback API
       requestBody:
@@ -420,6 +422,57 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/400"
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/500"
+
+  /feedback:
+    get:
+      tags:
+        - Feedback
+      summary: Retrive Feedback
+      description: Feedback List
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: query
+          name: user_id
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: role
+          required: true
+          schema:
+            type: number
+      responses:
+        200:
+          description: Feedback list retrived successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FeedbackList200"
+        400:
+          description: Please provide token
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/400"
+        401:
+          description: Token expired, Please generate new token!
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/401"
+        404:
+          description: Feedback list not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/404"
         500:
           description: Internal server error
           content:
@@ -1486,7 +1539,95 @@ components:
                 format: uuid
               country_name:
                 type: string
-    
+    FeedbackList200:
+      type: object
+      properties:
+        success:
+          type: string
+        code:
+          type: string
+        msg:
+          type: string
+        body:
+          type: array
+          items:
+            type: object
+            properties:
+              _id:
+                type: string
+                format: uuid
+              user_id_giver:
+                type: string
+              user_id_feedbacker:
+                type: string
+              private_feedback:
+                type: object
+                properties:
+                  reason_for_ending_contract:
+                    type: string
+                  recommending_to_others:
+                    type: number
+                  strengths:
+                    type: array
+                    items:
+                      type: string
+                  status:
+                    type: number
+                  is_deleted:
+                    type: boolean
+              public_feedback:
+                type: object
+                properties:
+                  reason_for_ending_contract:
+                    type: string
+                  recommending_to_others:
+                    type: number
+                  feedback:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        options:
+                          type: string
+                        ratings:
+                          type: string
+                        _id: 
+                          type: string
+                  feedback_message:
+                    type: string
+                  status:
+                    type: number
+                  is_deleted:
+                    type: boolean
+              is_deleted:
+                type: boolean
+              state:
+                type: number
+              created_at:
+                type: string
+                format: date-time
+              updated_at:
+                type: string
+                format: date-time
+              _v:
+                type: string
+              client_details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    userId:
+                      type: string
+                    businessName:
+                      type: string
+                    profile_image:
+                      type: string
+                    firstName:
+                      type: string
+                    lastName:
+                      type: string
+                    location:
+                      type: string
     UserProfileList200:
       type: object
       properties:
